--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <img src="images/main5.jpg" class="card-img-top" alt="사진 5" data-bs-toggle="modal"
                                 data-bs-target="#modal5">
                             <div class="card-body">
-                                <p class="card-text text-center">행복한 미소</p>
+                                <p class="card-text text-center">시크한 표정</p>
                             </div>
                         </div>
                     </div>
@@ -836,3 +836,4 @@
 </body>
 
 </html>
+
