--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="flip-container">
         <section class="hero-section text-center py-3">
             <h1>🎉 결혼 축하한다! 🎉</h1>
-            <p>초라하지만, 이거 보면서 옛 생각 떠올려봐!</p>
+            <p>결혼 전에 이거 보면서 옛 생각 떠올려봐</p>
         </section>
 
         <!-- 사진 슬라이드 -->
@@ -109,8 +109,8 @@
 
     <!-- 추억앨범 섹션 -->
     <section class="message-section text-center py-5">
-        <h3>행복한 결혼생활을 응원할게!</h3>
-        <p>사랑과 웃음이 가득한 가정이 되길 바랄게!</p>
+        <h3>행복한 결혼생활을 응원한다잉</h3>
+        <p>사랑과 웃음이 가득한 결혼생활 돼라</p>
         <!-- 앨범 페이지 이동 버튼 -> SPA용 스크롤 버튼 -->
         <button id="open-album" class="btn btn-outline-secondary mt-3">추억 앨범 보기</button>
     </section>
@@ -216,7 +216,7 @@
                         <!-- <input class="form-check-input" type="checkbox" value="" id="intro-no-show"> -->
                         <!-- <label class="form-check-label" for="intro-no-show">다시 보지 않기</label> -->
 
-                        <button id="enable-bgm" class="btn btn-primary w-100 py-2 mt-2">배경음악 켜기 🔊</button>
+                        <button id="enable-bgm" class="btn btn-primary w-100 py-2 mt-2">배경음악 켜기</button>
                     </div>
                 </div>
                 <div class="modal-footer">
